--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,10 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [0.0.3] - 2022-12-30
+### Added
+ - Full s3 path included in error message when unable to fetch the remote file
+
 ## [0.0.2] - 2022-02-24
 ### Added
  - Ability to set ACL for put operations
